# ollama_embed

./: Cargo.toml  ModelFile  README.md  build.rs  deploy-lin.sh  deploy-win.bat
src/: lib.rs
