[package]
name = "ollama_embed"
version = "0.1.0"
edition = "2024"

[dependencies]
gag = "1.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = [ "blocking" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.142"

[build-dependencies]
flate2 = "1.1.2"
reqwest = { version = "0.12.23", features = ["blocking"] }
tar = "0.4.44"
zip = "4.3.0"